changes to delete user API
