# src/postman/collections/swagger.json
@@ -145,45 +145,6 @@
         "tags": [
           "Users"
         ]
-      },
-      "delete": {
-        "description": "Delete a user by ID",
-        "operationId": "UsersController_remove",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "description": "User ID",
-            "schema": {
-              "type": "number"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User deleted successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "User not found"
-          }
-        },
-        "security": [
-          {
-            "api-key": []
-          }
-        ],
-        "summary": "Delete user",
-        "tags": [
-          "Users"
-        ]
       }
     },
     "/users/{id}/update": {
@@ -232,6 +193,47 @@
           }
         ],
         "summary": "Update user",
+        "tags": [
+          "Users"
+        ]
+      }
+    },
+    "/users/{id}/delete": {
+      "delete": {
+        "description": "Delete a user by ID",
+        "operationId": "UsersController_remove",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "User ID",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "User not found"
+          }
+        },
+        "security": [
+          {
+            "api-key": []
+          }
+        ],
+        "summary": "Delete user",
         "tags": [
           "Users"
         ]
